--- a/.gitignore
+++ b/.gitignore
@@ -2,27 +2,40 @@
 /node_modules
 /.pnp
 .pnp.js
+.pnp.cjs
 
 # Testing
 /coverage
 
 # Next.js
 /.next/
+/.next/cache/
 /out/
 
 # Production
 /build
+/dist
+/.turbo
+/.cache
 
 # Misc
 .DS_Store
+Thumbs.db
 *.pem
+.eslintcache
+.netlify
 
 # Debug
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+pnpm-debug.log*
+*.log
 
 # Local env files
+.env
+.env.*
+!.env.example
 .env*.local
 
 # Vercel
@@ -31,4 +44,12 @@ yarn-error.log*
 # TypeScript
 *.tsbuildinfo
 next-env.d.ts
+
+# Editor/IDE
+.idea/
+.vscode/
+*.swp
+
+# App specific temp
+/public/tmp/
 
