--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "recharts": "^3.0.2"
   },
   "devDependencies": {
+    "eslint": "^9",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
