--- a/package.json
+++ b/package.json
@@ -15,8 +15,6 @@
     "recharts": "^3.0.2"
   },
   "devDependencies": {
-    "eslint": "^9",
-    "eslint-config-next": "^15",
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
@@ -24,8 +22,10 @@
     "@types/react-dom": "^19",
     "autoprefixer": "^10.4.21",
     "cross-env": "^7.0.3",
+    "eslint": "^9",
+    "eslint-config-next": "^15",
     "postcss": "^8.5.5",
     "tailwindcss": "^3.4.17",
-    "typescript": "^5"
+    "typescript": "5.9.2"
   }
 }
